--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,62 @@
-/* You can add global styles to this file, and also import other style files */
+ :root {
+    --gradient: linear-gradient(to left top, #DD2476 10%, #FF512F 90%) !important;
+  }
+  body{
+    background: #f0dfd1dc !important;
+  }
+  
+  .card {
+    width: 18rem;
+    background: #BCD9AE;
+    border: 2px solid black;
+    color: rgba(250, 250, 250, 0.8);
+    margin-bottom: 2rem;
+  }
+  
+  .btn {
+    border: 5px solid;
+    border-image-slice: 1;
+    background: var(--gradient) !important;
+    background-clip: text !important;
+    -webkit-text-fill-color: transparent !important;
+    border-image-source:  var(--gradient) !important; 
+    text-decoration: none;
+    transition: all .4s ease;
+  }
+  
+  .btn:hover, .btn:focus {
+        background: var(--gradient) !important;
+    background-clip: none !important;
+    -webkit-text-fill-color: #fff !important;
+    border: 5px solid rgba(246, 3, 206, 0.822) !important; 
+    box-shadow: #BCD9AE 1px 0 10px;
+    text-decoration: underline;
+  }
+
+/* Ajoutez les styles pour la classe 'rgpd-card' */
+
+.rgpd-card {
+  border-radius: 15px;
+  background-color: #BCD9AE; /* Couleur de fond modifiable */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ombre */
+  padding: 20px;
+  margin: 0 auto; /* Centre la carte horizontalement */
+  border-radius: 20px; 
+  width: 80%
+}
+
+.rgpd-card .card-content {
+  color: #333; /* Couleur du texte */
+}
+
+/* Facultatif : Styles pour les titres */
+.rgpd-card .card-content h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.button{
+  border:1px solid #FFA07A;
+}
+
+ 
