--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,11 +1,11 @@
 <div class="pos-f-t d-flex justify-content-center "style="margin-bottom: 40px;">  
     <nav class="navbar navbar-dark" style="background-color: #BCD9AE; border-radius: 20px; width: 80%;">
       <a href="/historique" class="navbar-toggler" type="button" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </a>    
+        <span class="navbar-toggler-icon"></span> <p>historique</p>
+     </a>    
       <a class="navbar-brand mx-auto" href="#">
         <img src="/assets/img/logo.png" alt="Logo" width="100" height="auto"> <!-- Utilisation du chemin fourni -->
-      </a>
+      </a> 
       <div class="ml-md-auto">
         <a href="panier">
           <span class="badge bg-secondary">{{nombreTotalBoxs()}}</span>
