--- a/src/app/component/panier/panier.component.css
+++ b/src/app/component/panier/panier.component.css
@@ -1,192 +1,1 @@
-.Btn-pay {
-    width: 130px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(15, 15, 15);
-    border: none;
-    color: white;
-    font-weight: 600;
-    gap: 8px;
-    cursor: pointer;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.103);
-    position: relative;
-    overflow: hidden;
-    transition-duration: .3s;
-    position: absolute;
-    right: 0;
-    margin-right: 20px;
-  }
-  .svgIcon {
-    width: 16px;
-  }
-  .svgIcon path {
-    fill: white;
-  }
-  .Btn-pay::before {
-    width: 130px;
-    height: 130px;
-    position: absolute;
-    content: "";
-    background-color: white;
-    border-radius: 50%;
-    left: -100%;
-    top: 0;
-    transition-duration: .3s;
-    mix-blend-mode: difference;
-  }
-  .Btn-pay:hover::before {
-    transition-duration: .3s;
-    transform: translate(100%,-50%);
-    border-radius: 0;
-  }
-  .Btn-pay:active {
-    transform: translate(5px,5px);
-    transition-duration: .3s;
-  } 
-  .Btn-supp {
-    width: 130px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(15, 15, 15);
-    border: none;
-    color: white;
-    font-weight: 600;
-    gap: 8px;
-    cursor: pointer;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.103);
-    position: relative;
-    overflow: hidden;
-    transition-duration: .3s;
-    margin-left: 20px;
-    position: absolute;
-    left: 0;
-  }
-  .Btn-supp::before {
-    width: 130px;
-    height: 130px;
-    position: absolute;
-    content: "";
-    background-color: white;
-    border-radius: 50%;
-    left: -100%;
-    top: 0;
-    transition-duration: .3s;
-    mix-blend-mode: difference;
-  }
-  .Btn-supp:hover::before {
-    transition-duration: .3s;
-    transform: translate(100%,-50%);
-    border-radius: 0;
-  }
-  .Btn-supp:active {
-    transform: translate(5px,5px);
-    transition-duration: .3s;
-  }
-  .button {
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    appearance: none;
-    border: none;
-    background: none;
-  /*   color: ; */
-    cursor: pointer;
-    position: relative;
-    padding: 8px;
-    margin-bottom: 20px;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 14px;
-    transition: all .15s ease;
-  }
-  .button::before,
-  .button::after {
-    content: '';
-    display: block;
-    position: absolute;
-    right: 0;
-    left: 0;
-    height: calc(50% - 5px);
-    border: 1px solid #0f1923   ;
-    transition: all .15s ease;
-  }
-  .button::before {
-    top: 0;
-    border-bottom-width: 0;
-  }
-  .button::after {
-    bottom: 0;
-    border-top-width: 0;
-  }
-  .button:active,
-  .button:focus {
-    outline: none;
-  }
-  .button:active::before,
-  .button:active::after {
-    right: 3px;
-    left: 3px;
-  }
-  .button:active::before {
-    top: 3px;
-  }
-  .button:active::after {
-    bottom: 3px;
-  }
-  .button_lg {
-    position: relative;
-    display: block;
-    padding: 10px 20px;
-    color: #fff;
-    background-color: #0f1923;
-    overflow: hidden;
-    box-shadow: inset 0px 0px 0px 1px transparent;
-  }
-  .button_lg::before {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 2px;
-    height: 2px;
-    background-color: #0f1923;
-  }
-  .button_lg::after {
-    content: '';
-    display: block;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: 4px;
-    height: 4px;
-    background-color: #0f1923;
-    transition: all .2s ease;
-  }
-  .button_sl {
-    display: block;
-    position: absolute;
-    top: 0;
-    bottom: -1px;
-    left: -8px;
-    width: 0;
-    background-color: rgb(0, 193, 0);
-    transform: skew(-15deg);
-    transition: all .2s ease;
-  }
-  .button_text {
-    position: relative;
-  }
-  .button:hover {
-    color: #0f1923;
-  }
-  .button:hover .button_sl {
-    width: calc(100% + 15px);
-  }
-  .button:hover .button_lg::after {
-    background-color: #fff;
-  }
-  
+.Btn-pay,.Btn-supp{height:40px;display:flex;background-color:#0f0f0f;font-weight:600;gap:8px;box-shadow:5px 5px 10px rgba(0,0,0,.103)}.Btn-pay,.Btn-supp,.button_lg{color:#fff;overflow:hidden}.Btn-pay{width:130px;align-items:center;justify-content:center;border:none;cursor:pointer;transition-duration:.3s;position:absolute;right:0;margin-right:20px}.svgIcon{width:16px}.Btn-pay::before,.Btn-supp,.Btn-supp::before{width:130px;transition-duration:.3s;position:absolute}.svgIcon path{fill:white}.Btn-pay::before,.Btn-supp::before{height:130px;content:"";background-color:#fff;border-radius:50%;left:-100%;top:0;mix-blend-mode:difference}.Btn-pay:hover::before,.Btn-supp:hover::before{transition-duration:.3s;transform:translate(100%,-50%);border-radius:0}.Btn-supp,.button{border:none;cursor:pointer}.Btn-pay:active,.Btn-supp:active{transform:translate(5px,5px);transition-duration:.3s}.Btn-supp{align-items:center;justify-content:center;margin-left:20px;left:0}.button{-moz-appearance:none;-webkit-appearance:none;appearance:none;background:0 0;position:relative;padding:8px;margin-bottom:20px;text-transform:uppercase;font-weight:700;font-size:14px;transition:.15s}.button_lg,.button_lg::after,.button_lg::before{background-color:#0f1923}.button::after,.button::before{content:'';display:block;position:absolute;right:0;left:0;height:calc(50% - 5px);border:1px solid #0f1923;transition:.15s}.button::before{top:0;border-bottom-width:0}.button::after{bottom:0;border-top-width:0}.button:active,.button:focus{outline:0}.button:active::after,.button:active::before{right:3px;left:3px}.button:active::before{top:3px}.button:active::after{bottom:3px}.button_lg{position:relative;display:block;padding:10px 20px;box-shadow:inset 0 0 0 1px transparent}.button_lg::after,.button_lg::before,.button_sl{display:block;position:absolute}.button_lg::before{content:'';top:0;left:0;width:2px;height:2px}.button_lg::after{content:'';right:0;bottom:0;width:4px;height:4px;transition:.2s}.button_sl{top:0;bottom:-1px;left:-8px;width:0;background-color:#00c100;transform:skew(-15deg);transition:.2s}.button_text{position:relative}.button:hover{color:#0f1923}.button:hover .button_sl{width:calc(100% + 15px)}.button:hover .button_lg::after{background-color:#fff}
